--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "better-scroll": "^2.2.1",
     "core-js": "^3.6.5",
     "lodash": "^4.17.21",
+    "mitt": "^2.1.0",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.0-0",
