优化网络请求

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "better-scroll": "^2.2.1",
     "core-js": "^3.6.5",
+    "js-base64": "^3.6.0",
     "lodash": "^4.17.21",
     "mitt": "^2.1.0",
     "vant": "^3.0.16",
